Extend set of java compiler option types